--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,30 @@ html, body {
   background-repeat: repeat;
   background-size: 350px;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f4ed3f;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f4ed3f;
+}
+
+.content-body {
+  position: relative;
+  /* height: 100%; */
+  min-height: calc(100vh - 45px);
+}
