--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,58 @@ html, body {
   /* height: 100%; */
   min-height: calc(100vh - 45px);
 }
+
+/* Mapbox Marker Styles */
+.marker {
+  /* background: black; */
+  /* box-shadow: 5px -5px 15px black; */
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  padding: 0px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.tacklebox {
+  background-image: url('./images/map-icons/tacklebox.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
+
+}
+
+.tourdate {
+  background-image: url('./images/map-icons/tourdate.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
+}
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Tungsten', sans-serif;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  border-radius: 0;
+  background: black;
+  color: white;
+  height: 135px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px 0px 20px;
+}
+
+.mapboxgl-popup-close-button {
+  top: -2px;
+  font-size: 2.5rem;
+  right: 7px;
+}
+
+.mapboxgl-popup-tip {
+  display: none;
+  border-top-color: black !important;
+  /* border: 10px solid black; */
+  background: black;
+}
