--- a/src/index.css
+++ b/src/index.css
@@ -74,12 +74,12 @@ html, body {
 }
 
 .tacklebox {
-  background-image: url('./images/map-icons/tacklebox.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
+  background-image: url('../public/images/map-icons/tacklebox.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
 
 }
 
 .tourdate {
-  background-image: url('./images/map-icons/tourdate.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
+  background-image: url('../public/images/map-icons/tourdate.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
 }
 .mapboxgl-popup {
   max-width: 200px;
