--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px #f4ee3e inset !important;
+  -webkit-box-shadow: 0 0 0 30px #d2c551 inset !important;
 }
 
 .input-group {
