--- a/src/index.css
+++ b/src/index.css
@@ -90,20 +90,22 @@ html, body {
   font-family: 'Tungsten', sans-serif;
   font-size: 1.5rem;
   line-height: 2rem;
-  border-radius: 0;
+  border-radius: 5px;
+  border: 1.5px solid #f4ed3f;
   background: black;
   color: white;
-  height: 135px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px 0px 20px;
+  padding: 5px 25px 0px 25px;
 }
 
 .mapboxgl-popup-close-button {
   top: -2px;
-  font-size: 2.5rem;
+  /* color: #f4ed3f; */
+  font-size: 3rem;
   right: 7px;
   outline: none !important;
 }
@@ -111,6 +113,7 @@ html, body {
 .mapboxgl-popup-tip {
   display: none;
   border-top-color: black !important;
+  color: #f4ed3f;
   /* border: 10px solid black; */
   background: black;
 }
