--- a/src/index.css
+++ b/src/index.css
@@ -157,11 +157,19 @@ input[type='file'] {
 }
 
 .input-group input[type='file']::-webkit-file-upload-button {
-  display: none;
+  /* display: none; */
 }
 
 .input-group input[type='file']::file-selector-button {
-  display: none;
+  /* display: none; */
+  background: black;
+  color: #d2c551;
+  padding: 0.5rem 2rem;
+  border-radius: 9999px;
+  outline: none;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-right: 25px;
 }
 
 .input-group-text {
