--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,10 @@ html, body {
 
 }
 
+.tacklebox.found {
+  background-image: url('../public/images/map-icons/found-tacklebox-yellow.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
+}
+
 .tourdate {
   background-image: url('../public/images/map-icons/tourdate.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
 }
